--- a/.i3/config
+++ b/.i3/config
@@ -336,7 +336,7 @@ bar {
         separator  #454947
 
 #                          border  backgr. text
-        focused_workspace  #F9FAF9 #E6B450 #222222
+        focused_workspace  #F9FAF9 #EE6F31 #222222
         active_workspace   #595B5B #353836 #FDF6E3
         inactive_workspace #595B5B #222D31 #EEE8D5
         binding_mode       #16a085 #2C2C2C #F9FAF9
