--- a/.i3/config
+++ b/.i3/config
@@ -279,6 +279,7 @@ exec --no-startup-id clipit
 # exec --no-startup-id blueman-applet
 # exec_always --no-startup-id sbxkb
 exec --no-startup-id conky -c ~/.config/conky/lamentis/lamentis.conkyrc
+exec --no-startup-id redshift
 # exec --no-startup-id start_conky_green
 exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
