--- a/.i3/config
+++ b/.i3/config
@@ -17,7 +17,7 @@ hide_edge_borders none
 # change borders
 bindsym $mod+u border none
 bindsym $mod+y border pixel 1
-bindsym $mod+n border normal
+
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -25,6 +25,9 @@ font xft:URWGothic-Book 11
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
+
+# start file browser
+bindsym $mod+n exec nautilus
 
 # start a terminal
 bindsym $mod+Return exec termite
