tmux and nvchad

--- a/picom.conf
+++ b/picom.conf
@@ -2,9 +2,10 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 6.0;
+corner-radius = 15.0;
 round-borders = 4;
 rounded-corners-exclude = [
+  "class_g = 'Ulauncher'",
   "class_g = 'i3bar'",
   "class_g = 'dmenu'",
   "class_g = 'Polybar'",
@@ -17,6 +18,7 @@ rounded-corners-exclude = [
 round-borders-exclude = [
   "class_g = 'i3bar'",
   "class_g = 'dmenu'",
+  "class_g = 'Ulauncher'",
   "window_type = 'toolbar'",
   "window_type = 'dropdown_menu'",
   "window_type = 'popup_menu'",
@@ -32,13 +34,13 @@ round-borders-exclude = [
 #
 round-borders-rule = [
   "0:class_g = 'Ulauncher'",
-  "2:window_type = 'normal'",
-  "2:window_type = 'dialog'",
-  "2:window_type = 'splash'",
-  "2:window_type = 'tooltip'",
-  "2:window_type = 'utility'",
-  "2:window_type = 'notification'",
-  "2:class_g = 'Rofi'",
+  "1:window_type = 'normal'",
+  "1:window_type = 'dialog'",
+  "1:window_type = 'splash'",
+  "1:window_type = 'tooltip'",
+  "1:window_type = 'utility'",
+  "1:window_type = 'notification'",
+  "1:class_g = 'Rofi'",
 ];
 
 #################################
@@ -89,6 +91,7 @@ shadow-offset-y = -5;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Dunst'",
+  "class_g = 'Ulauncher'",
   "class_g = 'Conky'",
   "class_g = 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -185,10 +188,9 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-  "100:class_g     = 'kitty'",
+  "100:window_type = 'normal'",
   "100:class_g     = 'Polybar'",
   "80:class_g     = 'Bar'",             # lemonbar
-  "100:window_type = 'normal'",
   "100:class_g    = 'slop'",            # maim
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
@@ -252,9 +254,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  #"window_type = 'dock'",
-  #"window_type = 'desktop'",
-  #"class_g = 'URxvt'",
+  "class_g = 'Ulauncher'",
   #
   # prevents picom from blurring the background
   # when taking selection screenshot with `main`
