--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ font_family      JetBrains mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 9.0
 
 #: Font size (in pts)
 
@@ -46,7 +46,7 @@ font_family      JetBrains mono
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  6
+# adjust_line_height  6
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -1508,7 +1508,8 @@ adjust_line_height  6
 
 #: }}}
 #
-include ./Dark_Pastel.conf
+include ./theme.conf
 
 window_padding_width 0
 # background_opacity .80
+background            #0f0f0f
