--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
 history=file:///home/kevin/\xc1rea de trabalho, file:///home/kevin, file:///home/kevin/Imagens/wallpapers, file:///home/kevin/Downloads/Batman 2022 WEB-DL 1080p DUAL 5.1, file:///home/kevin/Downloads
-lastVisited=file:///home/kevin/\xc1rea de trabalho
-qtVersion=5.15.3
+lastVisited=file:///home/kevin/Downloads
+qtVersion=5.15.4
 shortcuts=file:, file:///home/kevin
 sidebarWidth=97
 treeViewHeader="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xeb\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\b\0\0\0\x1\0\0\0\0\0\0\0;\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0h\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)"
