--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -532,7 +532,8 @@ font_size 9.0
 #: resizing windows. The cells value is used for horizontal resizing
 #: and the lines value for vertical resizing.
 
-# window_border_width 0.5pt
+window_border_width 2.5pt
+
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -540,7 +541,7 @@ font_size 9.0
 #: be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
 
-# draw_minimal_borders yes
+draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: minimum needed borders for inactive windows are drawn. That is only
@@ -599,7 +600,7 @@ font_size 9.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -701,7 +702,7 @@ font_size 9.0
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+# tab_powerline_style round
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1030,7 +1031,7 @@ font_size 9.0
 
 #: OS specific tweaks {{{
 
-# wayland_titlebar_color system
+wayland_titlebar_color #000
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
@@ -1106,7 +1107,7 @@ font_size 9.0
 #: mouse cursor invisible on dual GPU machines. Changing this setting
 #: by reloading the config is not supported.
 
-# linux_display_server auto
+linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
@@ -1511,5 +1512,6 @@ font_size 9.0
 include ./theme.conf
 
 window_padding_width 0
-# background_opacity .80
+# background_opacity .60
 background            #0f0f0f
+
