fixed neovim config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ font_family      JetBrains mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 9.0
+font_size 10.0
 
 #: Font size (in pts)
 
@@ -174,7 +174,7 @@ font_size 9.0
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
