--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -756,7 +756,7 @@ hide_window_decorations no
 #: Color scheme {{{
 
 # foreground #dddddd
-# background #000000
+background #101317
 
 #: The foreground and background colors
 
@@ -1509,5 +1509,5 @@ linux_display_server x11
 
 #: }}}
 #
-window_padding_width 0
-# background_opacity .60
+# window_padding_width 12
+background_opacity
