--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,4 +80,4 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-source "/usr/lib/python3.10/site-packages/powerline/bindings/tmux/powerline.conf"
+source "/home/kevin/.local/lib/python3.10/site-packages/powerline/bindings/tmux/powerline.conf"
