--- a/picom.conf
+++ b/picom.conf
@@ -2,13 +2,14 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 15.0;
-round-borders = 4;
+corner-radius = 6.0;
+round-borders = 6;
 rounded-corners-exclude = [
   "class_g = 'Ulauncher'",
   "class_g = 'i3bar'",
   "class_g = 'dmenu'",
   "class_g = 'Polybar'",
+  "class_g = 'Xfce4-panel'",
   "window_type = 'toolbar'",
   "window_type = 'dropdown_menu'",
   "window_type = 'popup_menu'",
@@ -57,14 +58,14 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 20;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 shadow-opacity = .8
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -20;
+shadow-offset-x = -10;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
@@ -119,7 +120,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
